Trying to make the variable rows (with the charts) to calculate how tall they can be, but I think I need to make the CSS a little more straightforward before I can achieve the desired effect. After I get it calculating correctly, I will make it so only at most two rows are visible at a time in the short-screen mode.

--- a/moving-man/src/styles/sim.less
+++ b/moving-man/src/styles/sim.less
@@ -59,13 +59,13 @@
         }
     }
 
-    &.two-rows {
-        height: @normal-height + ((@normal-height - @collapsed-height) / 2);
-    }
+    // &.two-rows {
+    //     height: @normal-height + ((@normal-height - @collapsed-height) / 2);
+    // }
 
-    &.one-row {
-        height: @normal-height + ((@normal-height - @collapsed-height) * 2);
-    }
+    // &.one-row {
+    //     height: @normal-height + ((@normal-height - @collapsed-height) * 2);
+    // }
 
     .row-show,
     .row-hide {
